--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 #body-header{
     opacity: 0.8;
     height: 65vh;
-    background-image: url(image/cser.jpg);
+    background-image: url(image/cse.jpg);
    background-position: center;
    background-size: contain;
     background-attachment:local;
